fix admin dashboard navbar overlapping

--- a/my-app/src/react-components/AdminDashboard/AdminDashboard.css
+++ b/my-app/src/react-components/AdminDashboard/AdminDashboard.css
@@ -1,5 +1,6 @@
 .adminDashboardContainer{
-    padding: 50px; 
+    padding: 10vh;
+
 }
 
 .notUnderlined{
